--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
         <nav></nav>
 
         <main>
+            <section class="mother-of-carosel">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev" style="z-index: 1000000 !important; top: 20% !important">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next" style="z-index: 1000000 !important; top: 20% !important">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </section>
         </main>
 
         <footer></footer>
